--- a/Javascript/闭包/闭包.html
+++ b/Javascript/闭包/闭包.html
@@ -10,7 +10,7 @@
 			/* 如何实现闭包：
                 1.函数嵌套
                 2.内部函数引用外部函数的变量
-                3.外部函数返回内部函数
+                3.外部函数返回内部函数（可选）
             */
 			function outerFn() {
 				const outerVar = { name: "吕威鹏", age: 18 };
