style: 页面标题修改

--- a/Javascript/改变this指向的7种方式/改变this指向的7种方式.html
+++ b/Javascript/改变this指向的7种方式/改变this指向的7种方式.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>改变this指向的7种方式</title>
 	</head>
 	<body>
 		<script>
