--- a/React/基础/3-useState/index.html
+++ b/React/基础/3-useState/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>React-Mini-App</title>
+		<title>ReactHook-useState</title>
 		<link rel="stylesheet" href="/public/global.css" />
 		<link rel="stylesheet" href="/src/index.css" />
 	</head>
