--- a/Html&Css/居中布局/居中布局.html
+++ b/Html&Css/居中布局/居中布局.html
@@ -5,27 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>居中布局</title>
 		<style>
-			* {
-				box-sizing: border-box;
-			}
 			body p {
 				margin: 0;
 				padding: 0;
 			}
-
-			.border-black {
-				border: 1px solid #000;
-			}
-			.border-dashed {
-				border: 1px dashed #000;
-			}
-			.content-box {
-				margin-top: 10px;
-				width: 50%;
-				min-height: 50px;
-				background-color: rgba(144, 238, 144, 0.8);
-			}
-
 			ol li {
 				font-size: 1.2em;
 				margin: 10px 0;
@@ -33,12 +16,22 @@
 			h1 {
 				border-bottom: 1px solid #000;
 			}
+			.child {
+				border: 1px dashed #000;
+			}
+			.parent {
+				margin-top: 10px;
+				width: 50vw;
+				min-height: 100px;
+				background-color: rgba(144, 238, 144, 0.8);
+				border: 1px solid #000;
+			}
 
 			/* 行内元素 / 文本水平居中（父元素控制） */
 			#horizontal-text {
 				text-align: center;
 			}
-			#horizontal-text img {
+			#horizontal-text > img {
 				width: 100px;
 				height: 100px;
 				cursor: pointer;
@@ -46,8 +39,66 @@
 			/* 块级元素水平居中（固定宽度） */
 			#horizontal-block > div {
 				margin: 0 auto;
-				border: 1px dashed #000;
 				width: 100px;
+			}
+			/* 多个块级元素水平居中（flex 布局） */
+			#horizontal-blocks {
+				display: flex;
+				justify-content: center;
+			}
+
+			/* 单行文本垂直居中（行高法） */
+			#vertical-text {
+				height: 100px;
+				line-height: 100px;
+			}
+			/* 多行文本垂直居中 */
+			#vertical-texts {
+				/* padding法 */
+				/* padding: 10px 0; */
+
+				/* table-cell法 */
+				display: table-cell;
+				vertical-align: middle;
+				height: 100px; /* 须设置高度 */
+			}
+			/* 块级元素垂直居中（flex布局） */
+			#vertical-block {
+				display: flex;
+				align-items: center;
+			}
+
+			/* 绝对定位 + transform（不固定宽高） */
+			#hor-ver-transform {
+				position: relative;
+			}
+			#hor-ver-transform > div {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
+			/* 绝对定位 + margin:auto（固定宽高） */
+			#hor-ver-margin {
+				position: relative;
+			}
+			#hor-ver-margin > div {
+				position: absolute;
+				inset: 0;
+				margin: auto;
+				width: 60px;
+				height: 60px;
+			}
+			/* flex布局 */
+			#hor-ver-flex {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+			/* grid布局 */
+			#hor-ver-grid {
+				display: grid;
+				place-items: center;
 			}
 		</style>
 	</head>
@@ -56,27 +107,76 @@
 		<ol>
 			<li>
 				<b>行内元素 / 文本水平居中（父元素控制）</b>
-				<div id="horizontal-text" class="border-black content-box">
-					<span class="border-dashed">行内元素</span>
-					<p class="border-dashed">文本</p>
-					<img
-						class="border-dashed"
-						src="./居中布局01.png"
-						alt="图片"
-						title="图片" />
+				<div id="horizontal-text" class="parent">
+					<span class="child">行内元素</span>
+					<p class="child">文本</p>
+					<img class="child" src="./居中布局01.png" alt="图片" title="图片" />
 				</div>
 			</li>
 			<li>
 				<b>块级元素水平居中（固定宽度）</b>
-				<div id="horizontal-block" class="border-black content-box">
-					<div>块级元素</div>
+				<div id="horizontal-block" class="parent">
+					<div class="child">块级元素</div>
+				</div>
+			</li>
+			<li>
+				<b>多个块级元素水平居中（flex布局）</b>
+				<div id="horizontal-blocks" class="parent">
+					<div class="child">块级元素</div>
+					<div class="child">块级元素</div>
+					<div class="child">块级元素</div>
 				</div>
 			</li>
 		</ol>
 		<h1>垂直居中</h1>
 		<ol>
-			<li></li>
-			<li></li>
+			<li>
+				<b>单行文本垂直居中（行高法）</b>
+				<div id="vertical-text" class="parent">
+					<p>单行文本</p>
+				</div>
+			</li>
+			<li>
+				<b>多行文本垂直居中（padding法 或 table-cell法）</b>
+				<div id="vertical-texts" class="parent">
+					<p>多行文本</p>
+					<p>多行文本</p>
+					<p>多行文本</p>
+				</div>
+			</li>
+			<li>
+				<b>块级元素垂直居中（flex布局）</b>
+				<div id="vertical-block" class="parent">
+					<div class="child">块级元素</div>
+				</div>
+			</li>
+		</ol>
+		<h1>水平垂直居中</h1>
+		<ol>
+			<li>
+				<b>绝对定位 + transform（不固定宽高）</b>
+				<div id="hor-ver-transform" class="parent">
+					<div class="child">子元素</div>
+				</div>
+			</li>
+			<li>
+				<b>绝对定位 + margin:auto（固定宽高）</b>
+				<div id="hor-ver-margin" class="parent">
+					<div class="child">子元素</div>
+				</div>
+			</li>
+			<li>
+				<b>flex布局</b>
+				<div id="hor-ver-flex" class="parent">
+					<div class="child">子元素</div>
+				</div>
+			</li>
+			<li>
+				<b>grid布局</b>
+				<div id="hor-ver-grid" class="parent">
+					<div class="child">子元素</div>
+				</div>
+			</li>
 		</ol>
 	</body>
 </html>
