--- a/Javascript/数组去重/数组去重.html
+++ b/Javascript/数组去重/数组去重.html
@@ -24,7 +24,7 @@
 			console.log("去重前>>>", doubleBasicArray);
 			console.log("去重后>>>", result);
 
-			// 数组去重--含引用数据类型
+			// 数组去重--含引用数据类型元素
 			const refArray = [{ name: "吕威鹏", age: 18 }, "abc", 10, true];
 			const doubleRefArray = refArray.concat(refArray);
 			// Set + JSON
