--- a/Javascript/数组去重/数组去重.html
+++ b/Javascript/数组去重/数组去重.html
@@ -32,7 +32,7 @@
 				new Set(doubleRefArray.map(JSON.stringify)),
 				JSON.parse
 			);
-			console.log("数组去重--含引用数据类型");
+			console.log("数组去重--含引用数据类型元素");
 			console.log("去重前>>>", doubleRefArray);
 			console.log("去重后>>>", result2);
 		</script>
