--- a/Javascript/数组常用方法/其他方法.html
+++ b/Javascript/数组常用方法/其他方法.html
@@ -7,7 +7,36 @@
 	</head>
 	<body>
 		<script>
-			// ------------------------------合并与截取------------------------------
+			// ------------------------------查找元素------------------------------
+			// indexOf()：返回输入元素首次出现的索引（不存在返回 - 1）
+			const arr7 = ["a", "b", "c"];
+			const index1 = arr7.indexOf("b"); // 返回 1
+			console.log("indexOf 查找到:", index1);
+			const index2 = arr7.indexOf("d"); // 返回 -1
+			console.log("indexOf 未找到:", index2);
+
+			// includes()：判断数组是否包含指定元素（返回布尔值）
+			const arr8 = ["a", "b", "c"];
+			const boolean1 = arr8.includes("b"); // 返回 true
+			console.log("include 查找到:", boolean1);
+			const boolean2 = arr8.includes("d"); // 返回 false
+			console.log("include 未找到:", boolean2);
+
+			// ------------------------------排序反转------------------------------
+			// sort()：对数组元素进行排序并返回排序后的原数组
+			const arr5 = [1, 5, 26, 3, 7, 10];
+			const sortArr1 = arr5.sort(); // 默认按字符串 Unicode 顺序，返回 [1, 10, 26, 3, 5, 7]
+			console.log("sort 默认排序后的数组:", sortArr1, sortArr1 === arr5);
+			const sortArr2 = arr5.sort((a, b) => {
+				return a - b; // 正序，返回 [1, 3, 5, 7, 10, 26]
+			});
+			console.log("sort 正序排序后的数组:", sortArr2, sortArr2 === arr5);
+			const sortArr3 = arr5.sort((a, b) => {
+				return b - a; // 倒序，返回 [26, 10, 7, 5, 3, 1]
+			});
+			console.log("sort 倒序排序后的数组:", sortArr3, sortArr3 === arr5);
+
+			// ------------------------------合并截取------------------------------
 			// concat()：合并一个或多个数组，返回新数组
 			const arr1 = ["1", "2", "3"];
 			const arr2 = ["4", "5", "6"];
@@ -34,39 +63,20 @@
 			const array4 = arr4String.split("@"); // 返回 ["1", "2", "3"]
 			console.log("split 转换为的数组:", array4);
 
-			// ------------------------------排序------------------------------
-			// sort()：对数组元素进行排序并返回排序后的原数组
-			const arr5 = [1, 5, 26, 3, 7, 10];
-			const sortArr1 = arr5.sort(); // 默认按字符串 Unicode 顺序，返回 [1, 10, 26, 3, 5, 7]
-			console.log("sort 默认排序后的数组:", sortArr1, sortArr1 === arr5);
-			const sortArr2 = arr5.sort((a, b) => {
-				return a - b; // 正序，返回 [1, 3, 5, 7, 10, 26]
-			});
-			console.log("sort 正序排序后的数组:", sortArr2, sortArr2 === arr5);
-			const sortArr3 = arr5.sort((a, b) => {
-				return b - a; // 倒序，返回 [26, 10, 7, 5, 3, 1]
-			});
-			console.log("sort 倒序排序后的数组:", sortArr3, sortArr3 === arr5);
-
 			// reverse()：反转数组顺序并返回排序后的原数组
 			const arr6 = [1, 2, 3, 4, 5];
 			const reverseArr = arr6.reverse();
 			console.log("reverse 反转顺序后的数组:", reverseArr, reverseArr === arr6);
 
-			// ------------------------------查找元素------------------------------
-			// indexOf()：返回输入元素首次出现的索引（不存在返回 - 1）
-			const arr7 = ["a", "b", "c"];
-			const index1 = arr7.indexOf("b"); // 返回 1
-			console.log("indexOf 查找到:", index1);
-			const index2 = arr7.indexOf("d"); // 返回 -1
-			console.log("indexOf 未找到:", index2);
-
-			// include()：判断数组是否包含指定元素（返回布尔值）
-			const arr8 = ["a", "b", "c"];
-			const boolean1 = arr8.includes("b"); // 返回 true
-			console.log("include 查找到:", boolean1);
-			const boolean2 = arr8.includes("d"); // 返回 false
-			console.log("include 未找到:", boolean2);
+			// ------------------------------降维------------------------------
+			// flat()：根据指定深度降低数组的维度，返回降维后的新数组（默认深度为 1）
+			const arr9 = [[1, 2, ["a", "b", [true, false]]]];
+			const flatArr1 = arr9.flat(); // 返回 [1, 2, ["a", "b", [true, false]]]
+			console.log("flat 默认降维后的数组:", flatArr1);
+			const flatArr2 = arr9.flat(2); // 返回 [1, 2, "a", "b", [true, false]]
+			console.log("flat 指定降维后的数组:", flatArr2);
+			const flatArr3 = arr9.flat(Infinity); // 可以传入Infinity直接将数组降为一维，返回 [1, 2, 'a', 'b', true, false]
+			console.log("flat 传入Infinity降维后的数组:", flatArr3);
 		</script>
 	</body>
 </html>
